--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
+.gradle/
+.idea/
+build/
 *.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
-/build
-/captures
+local.properties
